--- a/homework-5/LU,LUP-разложение.ipynb
+++ b/homework-5/LU,LUP-разложение.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "id": "8b3da361",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 4,
    "id": "4aad4711",
    "metadata": {},
    "outputs": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 5,
    "id": "60bc8a22",
    "metadata": {},
    "outputs": [
@@ -120,7 +120,7 @@
        "       [ True,  True,  True]])"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 6,
    "id": "23f31141",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "id": "79b2f5f4",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "id": "db0e6d25",
    "metadata": {},
    "outputs": [
@@ -179,7 +179,7 @@
        "       [ 1.  ]])"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "id": "55e7ce40",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
        "       [ 1.  ]])"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "id": "e97c36e7",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 11,
    "id": "fb6edf37",
    "metadata": {},
    "outputs": [
@@ -251,11 +251,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_8420/1737286041.py:5: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_1492/1737286041.py:5: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  k = U[i + 1:, i] / U[i, i]\n",
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_8420/1737286041.py:8: RuntimeWarning: invalid value encountered in multiply\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_1492/1737286041.py:8: RuntimeWarning: invalid value encountered in multiply\n",
       "  U[i + 1:, :] -= k * U[i]\n",
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_8420/1737286041.py:5: RuntimeWarning: invalid value encountered in true_divide\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_1492/1737286041.py:5: RuntimeWarning: invalid value encountered in true_divide\n",
       "  k = U[i + 1:, i] / U[i, i]\n"
      ]
     },
@@ -270,7 +270,7 @@
        "        [ nan,  nan,  nan]]))"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 12,
    "id": "a647d9df",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
        "       [ 2.,  5.,  3.]])"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 13,
    "id": "f714f6c4",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 14,
    "id": "f755dd65",
    "metadata": {},
    "outputs": [],
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 15,
    "id": "28bc87ba",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 16,
    "id": "87b2cd34",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
        "       [ True,  True,  True]])"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 17,
    "id": "e1340abe",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
        "       [ True,  True,  True]])"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 18,
    "id": "9aca4dd3",
    "metadata": {},
    "outputs": [],
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 19,
    "id": "2e252692",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
        "       [ 5]])"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 20,
    "id": "5baea15b",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
        "       [ 5]])"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 21,
    "id": "a9be71ed",
    "metadata": {},
    "outputs": [
@@ -531,7 +531,7 @@
        "       [ 1.  ]])"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 22,
    "id": "1a970a45",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
        "       [ 1.  ]])"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 23,
    "id": "0b4bae1d",
    "metadata": {},
    "outputs": [],
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 24,
    "id": "323ef866",
    "metadata": {},
    "outputs": [
@@ -601,9 +601,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_8420/1737286041.py:5: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_1492/1737286041.py:5: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  k = U[i + 1:, i] / U[i, i]\n",
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_8420/1737286041.py:8: RuntimeWarning: invalid value encountered in multiply\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_1492/1737286041.py:8: RuntimeWarning: invalid value encountered in multiply\n",
       "  U[i + 1:, :] -= k * U[i]\n"
      ]
     },
@@ -618,7 +618,7 @@
        "        [ nan,  nan, -inf]]))"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 25,
    "id": "77ba3eb4",
    "metadata": {},
    "outputs": [
@@ -655,7 +655,7 @@
        "        [  0.,   0.,  -1.]]))"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 26,
    "id": "ca49933a",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 27,
    "id": "4a121abf",
    "metadata": {},
    "outputs": [
@@ -705,7 +705,7 @@
        "       [ True,  True,  True]])"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 28,
    "id": "f86bde14",
    "metadata": {},
    "outputs": [
@@ -728,7 +728,7 @@
        "       [ True,  True,  True]])"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 29,
    "id": "f053f482",
    "metadata": {},
    "outputs": [],
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 30,
    "id": "12a42755",
    "metadata": {},
    "outputs": [
@@ -779,7 +779,7 @@
        "       [ -1.]])"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 31,
    "id": "eb50917e",
    "metadata": {},
    "outputs": [
@@ -810,7 +810,7 @@
        "       [ -1.]])"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 32,
    "id": "9a682b34",
    "metadata": {},
    "outputs": [],
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 33,
    "id": "6852a243",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "64 µs ± 2.07 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "60.4 µs ± 837 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 34,
    "id": "18069b4d",
    "metadata": {},
    "outputs": [
@@ -874,7 +874,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "69.3 µs ± 4.5 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "69.2 µs ± 3.59 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
