--- a/homework-5/LU,LUP-разложение.ipynb
+++ b/homework-5/LU,LUP-разложение.ipynb
@@ -251,11 +251,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_1492/1737286041.py:5: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_23652/1737286041.py:5: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  k = U[i + 1:, i] / U[i, i]\n",
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_1492/1737286041.py:8: RuntimeWarning: invalid value encountered in multiply\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_23652/1737286041.py:8: RuntimeWarning: invalid value encountered in multiply\n",
       "  U[i + 1:, :] -= k * U[i]\n",
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_1492/1737286041.py:5: RuntimeWarning: invalid value encountered in true_divide\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_23652/1737286041.py:5: RuntimeWarning: invalid value encountered in true_divide\n",
       "  k = U[i + 1:, i] / U[i, i]\n"
      ]
     },
@@ -601,9 +601,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_1492/1737286041.py:5: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_23652/1737286041.py:5: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  k = U[i + 1:, i] / U[i, i]\n",
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_1492/1737286041.py:8: RuntimeWarning: invalid value encountered in multiply\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_23652/1737286041.py:8: RuntimeWarning: invalid value encountered in multiply\n",
       "  U[i + 1:, :] -= k * U[i]\n"
      ]
     },
@@ -834,8 +834,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.array([[2, 7, 11.], [0, -2, 1.], [2, 5, 3.]])\n",
-    "a = np.array([[4], [10], [5]])"
+    "A = np.array([[2, 7, 11.], \n",
+    "              [0, -2, 1.], \n",
+    "              [2, 5, 3.]])\n",
+    "a = np.array([[4], \n",
+    "              [10], \n",
+    "              [5]])"
    ]
   },
   {
@@ -856,7 +860,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60.4 µs ± 837 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "63.7 µs ± 2.27 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
@@ -874,7 +878,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "69.2 µs ± 3.59 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "67.5 µs ± 7.12 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
      ]
     }
    ],
