--- a/homework-5/LU,LUP-разложение.ipynb
+++ b/homework-5/LU,LUP-разложение.ipynb
@@ -131,31 +131,71 @@
   },
   {
    "cell_type": "markdown",
-   "id": "561dbf65",
+   "id": "1692142d",
    "metadata": {},
    "source": [
-    "Напишем функцию, которая, принимая на вход матрицу и вектор-столбец, с помощью LU-разложения находит решение СЛАУ. "
+    "Перед написанием функции для решения СЛАУ Ax=b напишем вспомогательные функции для решения уравнений Ly=b и Ux=y"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "ef950f28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Ly_b(L, b):\n",
+    "    n = len(L)\n",
+    "    y = np.zeros(n)\n",
+    "    y[0] = b[0] / L[0, 0]\n",
+    "    for i in range(1, n):\n",
+    "        y[i] = ( b[i] - L[i, :i] @ b[:i]) / L[i, i]\n",
+    "    y.resize(n, 1)\n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9eb860b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Ux_y(U, y):\n",
+    "    n = len(U)\n",
+    "    x = np.zeros(n)\n",
+    "    x[n - 1] = y[n - 1] / U[n - 1, n - 1] \n",
+    "    for i in range(n - 2, -1, -1):\n",
+    "        x[i] = ( y[i] - U[i, i + 1:] @ x[i + 1:]) / U[i, i]\n",
+    "    x.resize(n, 1)\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "561dbf65",
+   "metadata": {},
+   "source": [
+    "Теперь напишем саму функцию, которая, принимая на вход матрицу и вектор-столбец, с помощью LU-разложения находит решение СЛАУ. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "23f31141",
    "metadata": {},
    "outputs": [],
    "source": [
     "def solver_LU(A, b):\n",
     "    L, U = LU(A)\n",
-    "    L_n = np.linalg.inv(L)\n",
-    "    U_n = np.linalg.inv(U)\n",
-    "    y = np.array(L_n @ b)\n",
-    "    x = np.array(U_n @ y)\n",
-    "    return np.round(x, 2)"
+    "    y = Ly_b(L, b)\n",
+    "    x = Ux_y(U, y)\n",
+    "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "79b2f5f4",
    "metadata": {},
    "outputs": [],
@@ -167,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "db0e6d25",
    "metadata": {},
    "outputs": [
@@ -179,7 +219,7 @@
        "       [ 1.  ]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "55e7ce40",
    "metadata": {},
    "outputs": [
@@ -210,7 +250,7 @@
        "       [ 1.  ]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "e97c36e7",
    "metadata": {},
    "outputs": [],
@@ -243,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "fb6edf37",
    "metadata": {},
    "outputs": [
@@ -251,11 +291,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_23652/1737286041.py:5: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_19844/1737286041.py:5: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  k = U[i + 1:, i] / U[i, i]\n",
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_23652/1737286041.py:8: RuntimeWarning: invalid value encountered in multiply\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_19844/1737286041.py:8: RuntimeWarning: invalid value encountered in multiply\n",
       "  U[i + 1:, :] -= k * U[i]\n",
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_23652/1737286041.py:5: RuntimeWarning: invalid value encountered in true_divide\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_19844/1737286041.py:5: RuntimeWarning: invalid value encountered in true_divide\n",
       "  k = U[i + 1:, i] / U[i, i]\n"
      ]
     },
@@ -270,7 +310,7 @@
        "        [ nan,  nan,  nan]]))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "a647d9df",
    "metadata": {},
    "outputs": [
@@ -293,7 +333,7 @@
        "       [ 2.,  5.,  3.]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "f714f6c4",
    "metadata": {},
    "outputs": [],
@@ -341,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "f755dd65",
    "metadata": {},
    "outputs": [],
@@ -367,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "28bc87ba",
    "metadata": {},
    "outputs": [
@@ -394,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "87b2cd34",
    "metadata": {},
    "outputs": [
@@ -406,7 +446,7 @@
        "       [ True,  True,  True]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "e1340abe",
    "metadata": {},
    "outputs": [
@@ -429,7 +469,7 @@
        "       [ True,  True,  True]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "9aca4dd3",
    "metadata": {},
    "outputs": [],
@@ -456,11 +496,9 @@
     "def solver_LUP(A, b):\n",
     "    P, L, U = LUP(A)\n",
     "    b = P @ b\n",
-    "    L_n = np.linalg.inv(L)\n",
-    "    U_n = np.linalg.inv(U)\n",
-    "    y = np.array(L_n @ b)\n",
-    "    x = np.array(U_n @ y)\n",
-    "    return np.round(x, 2)"
+    "    y = Ly_b(L, b)\n",
+    "    x = Ux_y(U, y)\n",
+    "    return x"
    ]
   },
   {
@@ -473,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "2e252692",
    "metadata": {},
    "outputs": [
@@ -485,7 +523,7 @@
        "       [ 5]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "5baea15b",
    "metadata": {},
    "outputs": [
@@ -508,7 +546,7 @@
        "       [ 5]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "a9be71ed",
    "metadata": {},
    "outputs": [
@@ -531,7 +569,7 @@
        "       [ 1.  ]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "1a970a45",
    "metadata": {},
    "outputs": [
@@ -562,7 +600,7 @@
        "       [ 1.  ]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "0b4bae1d",
    "metadata": {},
    "outputs": [],
@@ -593,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "323ef866",
    "metadata": {},
    "outputs": [
@@ -601,9 +639,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_23652/1737286041.py:5: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_19844/1737286041.py:5: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  k = U[i + 1:, i] / U[i, i]\n",
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_23652/1737286041.py:8: RuntimeWarning: invalid value encountered in multiply\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_19844/1737286041.py:8: RuntimeWarning: invalid value encountered in multiply\n",
       "  U[i + 1:, :] -= k * U[i]\n"
      ]
     },
@@ -618,7 +656,7 @@
        "        [ nan,  nan, -inf]]))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "77ba3eb4",
    "metadata": {},
    "outputs": [
@@ -655,7 +693,7 @@
        "        [  0.,   0.,  -1.]]))"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "ca49933a",
    "metadata": {},
    "outputs": [
@@ -693,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "4a121abf",
    "metadata": {},
    "outputs": [
@@ -705,7 +743,7 @@
        "       [ True,  True,  True]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "f86bde14",
    "metadata": {},
    "outputs": [
@@ -728,7 +766,7 @@
        "       [ True,  True,  True]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "f053f482",
    "metadata": {},
    "outputs": [],
@@ -767,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "12a42755",
    "metadata": {},
    "outputs": [
@@ -779,7 +817,7 @@
        "       [ -1.]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "eb50917e",
    "metadata": {},
    "outputs": [
@@ -810,7 +848,7 @@
        "       [ -1.]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,85 +859,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a56c507",
-   "metadata": {},
-   "source": [
-    "Оценим, с какой приблизительной скоростью найдется решение для СЛАУ с начальными матрицей A и вектор-столбцом a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "9a682b34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = np.array([[2, 7, 11.], \n",
-    "              [0, -2, 1.], \n",
-    "              [2, 5, 3.]])\n",
-    "a = np.array([[4], \n",
-    "              [10], \n",
-    "              [5]])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "abfa0340",
-   "metadata": {},
-   "source": [
-    "Соответствующая матрица может быть представлена в виде матриц L и U методом LU-разложения, что было продемонстрировано выше, значит, может и методом LUP-разложения. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "6852a243",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "63.7 µs ± 2.27 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%timeit solver_LU(A, a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "18069b4d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "67.5 µs ± 7.12 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%timeit solver_LUP(A, a)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4f2f6978",
-   "metadata": {},
-   "source": [
-    "Как видно, решение с помощью LUP-разложения заняло чуть больше времени."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "1af6e21a",
    "metadata": {},
    "source": [
-    "Таким образом, можно увидеть, что метод LUP-разложения подходит для решения СЛАУ в большем количестве случаев, чем метод LU-разложения. Некоторые СЛАУ, как было показано выше, могут быть решены с помощью LU-разложения при некоторой конкретной очередности уравнений, но после перестановки строк системы матрица коэффициентов может уже не разложиться на нижне- и верхнеквадратные матрицы. Соответственно, LUP-разложение более универсально, при этом в случае возможности использования LU- разложения решение найдется быстрее им соответственно. "
+    "Таким образом, можно увидеть, что метод LUP-разложения подходит для решения СЛАУ в большем количестве случаев, чем метод LU-разложения. Некоторые СЛАУ, как было показано выше, могут быть решены с помощью LU-разложения при некоторой конкретной очередности уравнений, но после перестановки строк системы матрица коэффициентов может уже не разложиться на нижне- и верхнеквадратные матрицы."
    ]
   }
  ],
