--- a/homework-5/LU,LUP-разложение.ipynb
+++ b/homework-5/LU,LUP-разложение.ipynb
@@ -256,7 +256,7 @@
     }
    ],
    "source": [
-    "np.round(lu_solve(lu_factor(A), a), 2)"
+    "lu_solve(lu_factor(A), a)"
    ]
   },
   {
@@ -291,11 +291,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_29060/1737286041.py:5: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_9632/1737286041.py:5: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  k = U[i + 1:, i] / U[i, i]\n",
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_29060/1737286041.py:8: RuntimeWarning: invalid value encountered in multiply\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_9632/1737286041.py:8: RuntimeWarning: invalid value encountered in multiply\n",
       "  U[i + 1:, :] -= k * U[i]\n",
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_29060/1737286041.py:5: RuntimeWarning: invalid value encountered in true_divide\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_9632/1737286041.py:5: RuntimeWarning: invalid value encountered in true_divide\n",
       "  k = U[i + 1:, i] / U[i, i]\n"
      ]
     },
@@ -583,7 +583,7 @@
     }
    ],
    "source": [
-    "np.round(lu_solve(lu_factor(A), a), 2)"
+    "lu_solve(lu_factor(A), a)"
    ]
   },
   {
@@ -616,9 +616,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_29060/1737286041.py:5: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_9632/1737286041.py:5: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  k = U[i + 1:, i] / U[i, i]\n",
-      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_29060/1737286041.py:8: RuntimeWarning: invalid value encountered in multiply\n",
+      "C:\\Users\\katya\\AppData\\Local\\Temp/ipykernel_9632/1737286041.py:8: RuntimeWarning: invalid value encountered in multiply\n",
       "  U[i + 1:, :] -= k * U[i]\n"
      ]
     },
@@ -808,7 +808,7 @@
     }
    ],
    "source": [
-    "np.round(lu_solve(lu_factor(B), b), 2)"
+    "lu_solve(lu_factor(B), b)"
    ]
   },
   {
