--- a/homework-6/6-е домашнее задание - библиотека numpy.ipynb
+++ b/homework-6/6-е домашнее задание - библиотека numpy.ipynb
@@ -365,9 +365,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.97548515  2.81260635  0.9240663  -0.40639594  0.94978263]\n",
-      " [ 2.53809572  1.91231513  2.46903387  1.07253146  2.30065352]\n",
-      " [ 2.68685171  1.98718769  2.34878618  1.02399022  2.22909706]]\n"
+      "[[ 1.3933548   1.2138937  -0.56467264 -0.76256619 -0.68802319]\n",
+      " [-0.8565926  -0.82184537  2.42479262  0.37163321  0.35663439]\n",
+      " [-0.38181622 -0.01025587  1.86420027  2.63446081  2.25489447]]\n"
      ]
     }
    ],
@@ -699,14 +699,14 @@
      "output_type": "stream",
      "text": [
       "2 0\n",
-      "9.546010158105807e-06\n"
+      "1.7182818284590451e-06 1000000\n"
      ]
     }
    ],
    "source": [
     "a = 1\n",
     "b = np.exp(1)\n",
-    "n = 18\n",
+    "n = 10\n",
     "answ_pr = pryamoug(f, a, b, n)\n",
     "answ_tr = trapec(f, a, b, n)\n",
     "answ_sp = simps(f, a, b, n)\n",
@@ -719,14 +719,14 @@
     "    res[2] = simps(f, a, b, n)\n",
     "\n",
     "print(np.argmin(res), np.argmax(res))\n",
-    "print((b - a) / n)"
+    "print((b - a) / n, n)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "При сравнении получаемых приближенными методами ответов между собой получилось, что наименьший ответ был получен методом Симпсона, а наибольший - методом прямоугольников. Отличие в ответах будет при 5-м знаке после запятой при шаге примерно 9,6e-06"
+    "При сравнении получаемых приближенными методами ответов между собой получилось, что наименьший ответ был получен методом Симпсона, а наибольший - методом прямоугольников. Отличие в ответах будет при 5-м знаке после запятой при шаге примерно 1,7e-06 с разбиением на 1000000 шагов"
    ]
   },
   {
