--- a/homework-7/1. задание по обработке строк и функции map.ipynb
+++ b/homework-7/1. задание по обработке строк и функции map.ipynb
@@ -24,7 +24,7 @@
     }
    ],
    "source": [
-    "print(' '.join(map(str, (list(map(int, input().split()))[::2]))))"
+    "print(' '.join(list(input().split())[::2]))"
    ]
   },
   {
